# optlab

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/src/optlab/: __init__.py  sdk.py
backend/src/optlab/api/: main.py
backend/src/optlab/core/: __init__.py  advisor.py  archive.py  designs.py  encoding.py  metrics.py  models.py  runner.py
backend/src/optlab/evaluators/: __init__.py  base.py  builtin.py  factory.py  http.py  python.py
backend/src/optlab/services/: __init__.py  jobs.py  store.py
backend/tests/: test_advisor.py  test_api_jobs.py  test_core_contracts.py  test_designs.py  test_evaluators.py  test_runner_stability.py
docs/: algorithm-policy.md  api-contract.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  plotly-partials.d.ts  projectStorage.ts  spreadsheet.ts  styles.css  types.ts
frontend/src/components/: ConfigPanel.tsx  OptimizationResults.tsx  ParetoView.tsx  ProjectSidebar.tsx  ResultsTable.tsx  StatusPanel.tsx
notebooks/: sdk_examples.py  test_sdk_helpers.py
