[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optlab"
version = "0.1.0"
description = "Local engineering multi-objective optimization workbench"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pymoo>=0.6.1",
  "scikit-learn>=1.5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
